# OmniClaw

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
backend/: README.md  __init__.py
backend/app/: __init__.py  cli.py  main.py
backend/app/api/routes/: __init__.py  logs.py  runtime.py  tasks.py
backend/app/core/: agent.py  config.py  context.py  heartbeat.py  logger.py  provider.py
backend/app/models/: schemas.py
backend/app/skills/: loader.py
backend/app/storage/: sqlite.py
backend/app/tasks/: manager.py
backend/app/team/: mailbox.py
backend/app/tools/: builtins.py  registry.py  sandbox_tools.py
backend/app/worktree/: __init__.py  manager.py
docx/: AGENTS.md  OmniClaw-开发计划.md  OmniClaw-需求研究.md  PRD.md  TECH_DESIGN.md
frontend/: README.md
frontend/src/app/: page.tsx
scripts/: 1_check.py
test/: test_1.ipynb  test_2.ipynb
test/workspace/: omniclaw.db
workspace/memory/: user_profile.md
